...
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/imagebutton_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:contentDescription="@string/new_journal_date"
...
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/imagebutton_date"
                    app:layout_constraintStart_toEndOf="@+id/imagebutton_date"
                    app:layout_constraintTop_toTopOf="@+id/imagebutton_date" />

                <ImageButton
                    android:id="@+id/imagebutton_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:elevation="3dp"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <ImageButton
                    android:id="@+id/image_laugh"
                    style="@style/JournalButton"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/laugh"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toStartOf="@+id/image_happy"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/image_happy"
                    app:srcCompat="@drawable/ic_laugh_normala" />

...

                <ImageButton
                    android:id="@+id/image_happy"
                    style="@style/JournalButton"
                    android:contentDescription="@string/happy"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toStartOf="@+id/image_meh"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/image_laugh"
                    app:layout_constraintTop_toTopOf="@+id/image_meh"
                    app:srcCompat="@drawable/ic_happy_normala" />

                <TextView
...

                <ImageButton
                    android:id="@+id/image_meh"
                    style="@style/JournalButton"
                    android:contentDescription="@string/meh"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toStartOf="@+id/image_sad"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/image_happy"
                    app:layout_constraintTop_toTopOf="@+id/image_sad"
                    app:srcCompat="@drawable/ic_meh_normala" />

                <TextView
...

                <ImageButton
                    android:id="@+id/image_sad"
                    style="@style/JournalButton"
                    android:contentDescription="@string/sad"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toStartOf="@+id/image_cry"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/image_meh"
                    app:layout_constraintTop_toTopOf="@+id/image_cry"
                    app:srcCompat="@drawable/ic_sad_normala" />

                <TextView
...
                    android:background="@color/grey_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_happy" />

                <EditText
                    android:id="@+id/text_journal_entry"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:inputType="text|textMultiLine"
                    app:layout_constraintBottom_toTopOf="@+id/fab_journal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider2" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_journal"
...
