<resources>
    <string name="app_name">JournalApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in_">Sign In</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>


    <!-- Login -->
    <string name="label_sign_in">My Journal</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="sign_in">Sign In Witn Google</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>

    <!-- User Info -->
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_email">User email</string>


    <!-- Bottom Navigation -->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_calender">Calender</string>


    <!-- TODO: HOME -->
    <string name="text_home">HOME</string>
    <string name="journal_date">Monday, 25 June</string>
    <string name="journal_image">Emotion</string>
    <string name="journal_time">13:13</string>
    <string name="journal_feeling">GOOD</string>
    <string name="journal_text">What are your likely first 5 steps from your idea for an app?</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>


    <!-- TODO: CALENDER -->
    <string name="text_calender">CALENDER</string>

    <!-- TODO: NEW JOURNAL ENTRY -->
    <string name="new_journal_home">JOURNAL</string>
    <string name="title">How Was Your Day?</string>
    <string name="new_journal_date">Select a date</string>
    <string name="new_journal_time">Select a time.</string>
    <string name="laugh">Laugh</string>
    <string name="happy">Happy</string>
    <string name="meh">Meh</string>
    <string name="sad">Sad</string>
    <string name="cry">Crying</string>

    <!-- TODO: USER -->
    <string name="action_user">User</string>

    <!-- TODO: MENU -->
    <string name="user_image">User Image</string>
    <string name="user_fullname">Osaigbovo Odiase</string>
    <string name="signout">Sign Out</string>

</resources>
